--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ openpyxl>=3.1.0  # Excel support
 PyYAML>=6.0      # YAML support
 
 # For enhanced logging and progress tracking
+loguru>=0.7.0
 tqdm>=4.65.0
 rich>=13.0.0
 
