--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ asyncio-throttle>=1.0.2
 requests>=2.31.0
 aiohttp>=3.8.0
 
+# For GitHub and Vercel API integration
+PyGithub>=1.59.0
+httpx>=0.24.0
+
 # For working with different file formats
 openpyxl>=3.1.0  # Excel support
 PyYAML>=6.0      # YAML support
