🚀 Optimize for Vercel deployment: Next.js apps with proper React templates
✨ App Generator Updates:
- Create complete Next.js 14 apps instead of basic React apps
- Include Tailwind CSS, TypeScript, and Lucide React
- Generate proper directory structure (app/, public/, configs)
- Add Vercel configuration for each generated app
- Create modern, responsive React components with dark mode
- Include deployment-ready package.json with compatible dependencies

🔧 Infrastructure Improvements:
- Update main package.json with Node.js engine requirement
- Enhance vercel.json with framework detection and build commands
- Fix Next.js config to remove deprecated appDir warning
- Add comprehensive deployment documentation

🎨 Generated App Features:
- Professional UI with animations and hover effects
- Responsive design with mobile-first approach
- TypeScript support for better development experience
- One-click Vercel deployment capability
- Build-tested and production-ready

🧪 Testing:
- Verified apps build successfully without errors
- Confirmed Vercel compatibility and optimization
- Tested complete deployment pipeline

--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,9 @@
         }
       ]
     }
-  ]
+  ],
+  "outputDirectory": ".next",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 }
