--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.0",
+    "@anthropic-ai/sdk": "^0.59.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "lucide-react": "^0.294.0",
     "csv-parser": "^3.0.0",
+    "lucide-react": "^0.294.0",
     "multer": "^1.4.5-lts.1",
-    "@types/multer": "^1.4.11"
+    "next": "14.0.0",
+    "postcss": "^8",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.0.0"
